# Concurrency

C#/Concurrency/: Concurrency.csproj  Conveyor.cs  Program.cs  TextDataController.cs
C- with QT/ConditionalVariables/Sources/: main.cpp
C- with QT/Multithreading/: main.cpp
C- with QT/QtConcurrent-run/: main.cpp
C- with QT/QtConcurrent-run/Sources/: main.cpp
CPP/: Async.cpp  CMakeLists.txt  ConditionalQueue.cpp  FuturePromise.cpp  RawThreads.cpp  aux_tools.cpp  aux_tools.hpp  clean_words.cpp  data_input.txt  data_input_conc.txt  seq_etalon.cpp
CppParallelTasks/: LetterCounter.cpp  PrimeNumbersAsync.cpp  Queue.cpp  aProg.cpp  aProgAsync.cpp  gProg.cpp  gProgAsync.cpp  integral.cpp  m(arithmetic).cpp  maxNumAsync.cpp  text.txt  vectorMult.cpp  vectorSum.cpp  vectorSumAsync.cpp
DatabaseManipulation/: Async  FuturePromise  RawThreads  average_deviation.py  create_database.py  data.txt  data100KB.txt  data_input_conc.txt  database_manipulations.py  generate_files.py  main.py  plot_graphic.py  res_a_etalon.txt  res_n.txt
Java(Assembly_line)/: outputFile.txt  runconfig.txt  wordsByAlphabetOutput.txt  wordsByOccurrencesOutput.txt
Java(Assembly_line)/src/com/karabyn/: BlockReader.java  Manager.java  Merger.java  WordCounter.java
Java/src/: WordCounter.java  WordCounter_Future.java
MatrixMultiplication/: main.cpp  matrix_multiplication.cpp  matrix_multiplication.py
Python/: async_version.py  data_input_conc.txt  futures_python.py  input_data  input_data_1  multiprocessing_queue.py  raw_processes.py  raw_threads.py
ResearchFramework/: configuration.py  create_database.py  data_input_conc.txt  database_manipulations.py  generate_files.py  main.py  plot_graphic.py  res_a.txt  res_n.txt  standard_deviation.py
cpp_qt/: CMakeLists.txt  QtConcurrentP.cpp  QtConditionalQueue.cpp  QtRawThreads.cpp  q_seq_etalon.cpp
cpp_qt/Multithreading/: data_input.txt
cpp_qt/QtConcurrent-run/Sources/: main.cpp
cxx/: Async.cpp  CMakeLists.txt  ConditionalQueue.cpp  FuturePromise.cpp  RawThreads.cpp  aux_tools.hpp  clean_words.cpp  data_input_conc.txt  seq_etalon.cpp
